# Lumoria

./: .gitignore  BUILD.md  Makefile  README.md  lumoria.flatpakrepo  meson.build  net.windower.Lumoria.local.yml  net.windower.Lumoria.yml
data/: gschemas.compiled  meson.build  net.windower.Lumoria.desktop.in  net.windower.Lumoria.gresource  net.windower.Lumoria.gresource.xml  net.windower.Lumoria.metainfo.xml.in
data/css/: style.css
data/specs/: defaults.json  installer.json
data/specs/components/: d7vk.json  dxvk.json
data/specs/launchers/: windower4.json  windower5.json
data/specs/redists/: allfonts.json  andale.json  baekmuk.json  calibri.json  cambria.json  candara.json  cjkfonts.json  consolas.json  constantia.json  corbel.json  corefonts.json  dotnet10.json  dotnet48.json  dotnet7.json  dotnet8.json  dotnet9.json  dotnetdesktop10.json  dotnetdesktop7.json  dotnetdesktop8.json  dotnetdesktop9.json  droid.json  eufonts.json  fakechinese.json  fakejapanese.json  fakejapanese_ipamona.json  fakejapanese_vlgothic.json  fakekorean.json  gdiplus.json  ipamona.json  liberation.json  lucida.json  meiryo.json  opensymbol.json  pptfonts.json  sourcehansans.json  tahoma.json  takao.json  uff.json  unifont.json  vcrun2022.json  (+4 more)
data/specs/runners/: proton-cachyos.json  proton-ge.json  wine-ge-custom.json  wine-kron4ek-proton.json  wine-kron4ek-staging.json
po/: POTFILES
scripts/: burn-the-house-down.fish
src/: config.vapi  main.vala  meson.build
src/cli/: cli.vala  wrap.vala
src/models/: base-spec.vala  common.vala  component-spec.vala  defaults-spec.vala  installer-spec.vala  launcher-spec.vala  post-install-spec.vala  prefix-entry.vala  prefix-registry.vala  redist-spec.vala  runner-spec.vala  tool-adapters.vala  tool-spec.vala
src/native/: mspack-shim.c  mspack-shim.h
src/runtime/: components.vala  install.vala  launch-resolver.vala  logging.vala  prelaunch-patches.vala  redist.vala  run.vala  runner-download.vala  windower4-settings.vala  wine.vala
src/utils/: archive.vala  disk-usage.vala  environment.vala  filesystem.vala  git.vala  integrity.vala  paths.vala  preferences.vala  storage-cache.vala  web.vala
src/vapi/: mspack.vapi
src/widgets/: application.vala  icon-registry.vala  option-list-row.vala  prefix-row-widget.vala  settings-shared.vala  window.vala
src/widgets/dialogs/: create-prefix-dialog.vala  install-dialog.vala  manage-prefix-dialog.vala  preferences-dialog.vala  runner-settings-shared.vala  runner-version-picker-dialog.vala  terminal-dialog.vala  wine-tools-dialog.vala
src/widgets/preferences/: about-page.vala  advanced-page.vala  components-page.vala  env-vars-editor.vala  general-page.vala  runners-page.vala  runtime-page.vala  storage-page.vala  tool-group.vala  version-row.vala
src/widgets/services/: dynamic-launcher-service.vala  gamepad-list-navigator.vala  gamepad-service.vala  prefix-launch-service.vala
